--- a/content/loc_admin_review_logs/Admin String Standardization - ES/LARL_ES_style.css
+++ b/content/loc_admin_review_logs/Admin String Standardization - ES/LARL_ES_style.css
@@ -1,3 +1,28 @@
+/* Scrolling  */
+
+::-webkit-scrollbar {
+    width: .3em;
+}
+  
+::-webkit-scrollbar-track {
+    background:  #F8F7FC;
+    border-radius: 100vw;
+    margin-block: 0.5em;
+}
+  
+::-webkit-scrollbar-thumb {
+    background: #F71963;
+    border: 0.25em solid #F71963;
+    border-radius: 100vw;
+}
+
+/* Firefox scrolling */
+@supports (scrollbar-color: #F71963 #F8F7FC) {
+    * {
+        scrollbar-color: #F71963 #F8F7FC;
+    }
+}
+
 @font-face {
     font-family: "VTEXTrust Regular";
     src: url(./fonts/VTEXTrust-Regular.otf);
@@ -18,12 +43,30 @@
     padding: 0;
     box-sizing: border-box;
     font-family: var(--ff-regular), sans-serif;
+    scroll-behavior: smooth;
 }
 
 body {
     background: var(--bg-1);
     padding: 2rem;
     line-height: 1.6;
+}
+
+.wrapper {
+    display: grid;
+    grid-template-columns: auto auto auto auto auto auto;
+    grid-gap: 0.2rem;
+}
+
+.doc-content {
+    padding: 0 1rem 3rem;
+    grid-area: 1 / 1 / span 5 / span 1;
+    margin: 60px 17% 0 0;
+    overflow-y: scroll;
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: calc(100% - 60px);
 }
 
 h1 {
@@ -46,33 +89,22 @@ h3 {
 }
 
 .text-link {
-    text-decoration-skip-ink: none;
-    -webkit-text-decoration-skip: none;
     color: var(--bg-2);
     text-decoration: underline;
-}
-.wrapper {
-    display: grid;
-    grid-template-columns: auto auto auto auto auto auto;
-    grid-gap: 0.2rem;
-}
-
-.doc-content {
-    padding: 0 1rem;
-    grid-area: 1 / 1 / span 5 / span 1;
 }
 
 .intro-content {
     padding: 1rem 0rem;
 }
 
-.italic-font {
+.bold-text {
+    font-weight: bolder;
+}
+
+.italic-text {
     font-style: italic;
 }
 
-.bold-font {
-    font-weight: bolder;
-}
 
 table {
     margin-bottom: 2rem;
@@ -94,18 +126,18 @@ table {
     padding-bottom: 0.5rem;
 }
 
-aside {
-    position: sticky;
-    right: 0;
-    top: 0;
-}
-
 .aside-content {
     grid-area: 1 / 2 / span 1 / span 1;
-    padding: 0.5rem;
+    padding: 0.5rem 1rem 3rem;
     font-size: 0.8rem;
     color: var(--bg-5);
     line-height: 1.7;
+    position: fixed;
+    height: calc(100% - 60px);
+    left: 83%;
+    right: 0;
+    overflow-y: scroll;
+    top: 60px;
 }
 
 .content {
@@ -114,9 +146,11 @@ aside {
 }
 
 .aside-list {
+    text-align: left;
     padding-left: 1rem;
     border-left: 1px solid var(--bg-5);
     list-style: none;
+    width: 20ch;
 }
 
 .aside-item {
